daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: log-agent
spec:
  selector:
    matchLabels: { app: log-agent }
  template:
    metadata:
      labels: { app: log-agent }
    spec:
      containers:
      - name: log-agent
        image: nginx
        resources:
          limits: { memory: "64Mi", cpu: "50m" }
