namespace-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels: { app: order-service }
  template:
    metadata:
      labels: { app: order-service }
    spec:
      containers:
      - name: nginx
        image: nginx
