nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-nodeport
spec:
  type: NodePort
  selector:
    app: app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
