service-Loadbalnacer.yaml
apiVersion: v1
kind: Service
metadata:
name: frontend-service
annotations:
service.beta.kubernetes.io/aws-load-balancer-type: "alb"
spec:
type: LoadBalancer
selector:
app: frontend
ports:
- port: 80
