service.yaml
#Cluster-IP
apiVersion: v1
kind: Service
metadata:
name: order-service
namespace: default
spec:
type: ClusterIP # internal only
selector:
app: order-service # finds all pods with this label
ports:
- protocol: TCP
port: 80 # service port (what callers use)
targetPort: 8080 # container port
